amended position of response
purl and errors now appear at the top;
purl is cleared per generate click, so doesn't persist if errors now present after amendment;

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <div id="purlWrapper">
-        <h2 id="purl">Test</h2>
+        <h2 id="purl"></h2>
+        <div id="errorList"></div>
 
         <div class="confirmBtn_wrapper">
             <button class="pd_btn-confirm" id="btn_confirm" onclick="validate()">
                 <span>Generate</span>
             </button>
         </div>
-        <div id="errorList"></div>
+        
 
     
     </div>
